gcc/testsuite/sarif-replay.dg/2.1.0-invalid/3.13.2-no-version.sarif
{ } // { dg-error "expected sarifLog object to have a 'version' property \\\[SARIF v2.1.0 ยง3.13.2\\\]" }

/* { dg-begin-multiline-output "" }
    1 | { }
      | ^~~
   { dg-end-multiline-output "" } */
